# mmo

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compose.yaml  quicr.csv  quicr_integration.csv  tcp.csv  tcp_integration.csv
.zed/: debug.json
modules/chat_service/chat_client/: CMakeLists.txt
modules/chat_service/chat_client/include/: ChatClient.hpp  SendChatMessage.hpp
modules/chat_service/chat_client/src/: ChatClient.cpp
modules/chat_service/chat_lib/: CMakeLists.txt
modules/chat_service/chat_lib/include/: ChatClientError.hpp  ChatServerError.hpp
modules/chat_service/chat_server_exe/: CMakeLists.txt
modules/chat_service/chat_server_exe/src/: ChatServerController.cpp  ChatServerController.hpp  ChatServerRuntime.cpp
modules/chat_service/chat_service/: CMakeLists.txt
modules/chat_service/chat_service/include/: ChatService.hpp
modules/chat_service/chat_service/src/: ChatChannelManager.cpp  ChatChannelSubscriptionManager.cpp  ChatMessagePropagator.cpp  ChatService.cpp
modules/chat_service/chat_service/tests/: CMakeLists.txt
modules/client/: CMakeLists.txt
modules/client/shaders/: CMakeLists.txt  Opaque2.vert  glsl_shader.vert.u32
modules/client/src/: client.cpp  runtime.cpp  runtime.hpp
modules/client/src/debug/: CharacterBodyDebug.hpp  CharacterControllerDebug.hpp  ComponentGui.hpp  DebugComponent.hpp  EntityInterpolationDebug.hpp
modules/client/src/draw/: FrameRateCounter.hpp  Mesh.hpp  MeshBuffer.cpp  MeshBuffer.hpp  MeshData.hpp  WorldRenderer.cpp  WorldRenderer.hpp  WorldRendererGraph.hpp
modules/client/src/io/: ShaderManager.cpp  ShaderManager.hpp
modules/client/src/network/: EntityDerivationWriter.hpp  EntityInterpolation.hpp  EntityPositionInterpolator.cpp  EntityPositionInterpolator.hpp  InterpolatedProperty.hpp
modules/client/src/world/: Camera.cpp  Camera.hpp  ClientWorldController.cpp  ClientWorldController.hpp  EntityFactory.hpp  EntityInterpolation.hpp  Interpolation.hpp  LocalWorldController.cpp  LocalWorldController.hpp  ThirdPersonPlayerController.cpp  ThirdPersonPlayerController.hpp
modules/gui/: CMakeLists.txt  README.md
modules/gui/include/: ImGuiRenderPass.hpp
modules/gui/src/: ImGuiRenderPass.cpp
modules/messaging/: CMakeLists.txt
modules/messaging/include/: MessageSession.hpp
modules/mock_client/: CMakeLists.txt
modules/mock_client/src/: main.cpp
modules/network/: CMakeLists.txt
modules/network/include/: Address.hpp  BucketMetric.hpp  ByteBuffer.hpp  MessageHandler.hpp  Messenger.hpp  NetworkError.hpp  NetworkResult.hpp  Result.hpp  Serialization.hpp  Serializers.hpp  StatsLogger.hpp  TcpListener.hpp  TcpSocket.hpp  TcpStream.hpp  UdpSocket.hpp  UdpStream.hpp
modules/network/include/bytebuffer/: ByteBuffer.hpp  ByteBufferCodec.hpp  ByteBufferDecoder.hpp  ByteBufferEncoder.hpp  ByteBufferReader.hpp  ByteBufferStreamReader.hpp  ByteBufferWriter.hpp
modules/network/include/errors/: SocketError.hpp
modules/network/include/exception/: ByteBufferOverflowException.hpp  SocketClosedException.hpp  SocketException.hpp
modules/network/include/frames/: Frame.hpp  FrameCodec.hpp
modules/network/include/io/: BufferReader.hpp  BufferWriter.hpp  Read.hpp  Write.hpp
modules/network/include/messenger/: MessageHandler.hpp  Messenger.hpp  MessengerDebugLog.hpp
modules/network/include/metrics/: BucketMetric.hpp  HistoryBuffer.hpp  HistoryBufferExporter.hpp  NetworkStatsLogger.hpp
modules/network/include/packets/: LoginPacket.hpp  MessagePacket.hpp  Packet.hpp
modules/network/src/: NetworkStatsLogger.cpp  TcpSocket.cpp  UdpSocket.cpp
modules/network/src/frames/: FrameCodec.cpp
modules/network/src/messenger/: Messenger.cpp  MessengerDebugLog.cpp
modules/network/src/metrics/: HistoryBufferExporter.cpp
modules/network/tests/: ByteBufferCodecTests.cpp  ByteBufferTests.cpp  CMakeLists.txt  FrameEncoderTests.cpp  MessengerTests.cpp  SerializerTests.cpp  TestGenerators.cpp  TestGenerators.hpp  UdpStreamTests.cpp
modules/network/tests/quicr/: QuicrBasicTests.cpp  QuicrBenchmarks.cpp  QuicrEndpointTests.cpp  QuicrOverloadTests.cpp
modules/protocol/: CMakeLists.txt
modules/protocol/proto/: Chat.proto  Cluster.proto  Common.proto  Entity.proto  Login.proto  PlayerMove.proto  WorldState.fbs  WorldState.proto
modules/protocol/src/: MessageRegistry.hpp  Protocol.cpp
modules/protocol/src/messages/: GlmSerializers.hpp  PlayerMoveMessage.hpp  PlayerUpdateMessage.hpp  Serializers.hpp  WorldStateMessage.hpp  WorldState_generated.h
modules/serialization/: CMakeLists.txt
modules/serialization/tests/: CMakeLists.txt  SerializationBenchmarks.cpp
modules/server/: CMakeLists.txt  README.md
modules/server/src/: ClientManager.hpp  LoginHandler.cpp  LoginHandler.hpp  NetworkSender.hpp  PlayerClient.hpp  PlayerSession.hpp  WorldServer.cpp  WorldServer.hpp  ZoneClusterLink.cpp  ZoneClusterLink.hpp  ZoneCoordinator.cpp  ZoneCoordinator.hpp  ZoneManager.cpp  ZoneManager.hpp  ZoneProxy.hpp  ZoneServer.cpp  ZoneServer.hpp  ZoneServerConfiguration.hpp  server.cpp
modules/server/src/interest_management/: DistanceInterestManagement.hpp  FixedGrid.hpp  SpatialBackend.hpp  SpatialHashGrid.hpp
modules/server/src/monitoring/: BandwidthMonitor.hpp  MetricsReporter.hpp  NullMetricsReporter.hpp  TimescaleDbBandwidthMonitor.cpp  TimescaleDbBandwidthMonitor.hpp  TimescaleDbMetricsReporter.cpp  TimescaleDbMetricsReporter.hpp
modules/server/src/network/: FrameRouter.cpp  FrameRouter.hpp  InboundMessage.hpp  MessageDeserializer.hpp  MessageDispatcher.hpp  MessageQueue.hpp  NetworkReceiver.cpp  NetworkReceiver.hpp  OutboundMessage.hpp  PlayerSessionRegistry.cpp  PlayerSessionRegistry.hpp  SessionId.hpp
modules/server/src/replication/: StateReplicator.hpp
modules/server/src/systems/: ClientState.hpp  Interest.hpp  InterestResult.hpp  InterestSystem.cpp  InterestSystem.hpp
modules/server/tests/: CMakeLists.txt  RangeQueryBenchmarks.cpp  ZoneManagerTests.cpp
modules/server_gui/: CMakeLists.txt
modules/server_gui/src/: GuiRenderer.cpp  GuiRenderer.hpp  ServerGuiRuntime.hpp  server_gui.cpp
(+83 files in other folders)
